crates/musa-render/tests/snapshots/mei__annotated.snap
---
source: crates/musa-render/tests/mei.rs
expression: mei_of(source)
---
<?xml version="1.0" encoding="UTF-8"?>
<mei xmlns="http://www.music-encoding.org/ns/mei" meiversion="5.0">
  <music>
    <body>
      <mdiv>
        <score>
          <scoreDef meter.count="4" meter.unit="4" key.sig="0" key.mode="minor">
            <staffGrp>
              <staffDef n="1" lines="5" clef.shape="G" clef.line="2"/>
            </staffGrp>
          </scoreDef>
          <section>
            <measure n="1">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-0" dur="4" oct="4" pname="a"/>
                  <note xml:id="event-1" dur="4" oct="5" pname="c"/>
                  <note xml:id="event-2" dur="2" oct="5" pname="e"/>
                </layer>
              </staff>
              <phrase staff="1" startid="#event-0" endid="#event-4" label="antecedent"/>
              <dir staff="1" startid="#event-0" place="above" type="phrase">antecedent</dir>
              <dir staff="1" tstamp="1" place="above" type="section">Exposition</dir>
              <harm staff="1" tstamp="1" place="above">am</harm>
            </measure>
            <measure n="2">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-3" dur="2" oct="5" pname="f"/>
                  <note xml:id="event-4" dur="2" oct="5" pname="e"/>
                </layer>
              </staff>
              <harm staff="1" tstamp="1" place="above">fmaj7</harm>
            </measure>
            <measure n="3">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-5" dur="4" oct="4" pname="b"/>
                  <note xml:id="event-6" dur="4" oct="5" pname="e"/>
                  <note xml:id="event-7" dur="2" oct="5" pname="g" accid="s"/>
                </layer>
              </staff>
              <phrase staff="1" startid="#event-5" endid="#event-8" label="consequent"/>
              <dir staff="1" startid="#event-5" place="above" type="phrase">consequent</dir>
              <dir staff="1" tstamp="1" place="above" type="section">Development</dir>
              <harm staff="1" tstamp="1" place="above">e7</harm>
            </measure>
            <measure n="4">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-8" dur="1" oct="5" pname="a"/>
                </layer>
              </staff>
              <harm staff="1" tstamp="1" place="above">am</harm>
            </measure>
          </section>
        </score>
      </mdiv>
    </body>
  </music>
</mei>
