crates/musa-render/tests/snapshots/mei__invention.snap
---
source: crates/musa-render/tests/mei.rs
expression: mei_of(source)
---
<?xml version="1.0" encoding="UTF-8"?>
<mei xmlns="http://www.music-encoding.org/ns/mei" meiversion="5.0">
  <music>
    <body>
      <mdiv>
        <score>
          <scoreDef meter.count="4" meter.unit="4" key.sig="0" key.mode="major">
            <staffGrp>
              <staffDef n="1" lines="5" clef.shape="G" clef.line="2"/>
            </staffGrp>
          </scoreDef>
          <section>
            <measure n="1">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-0" dur="4" oct="4" pname="c"/>
                  <note xml:id="event-1" dur="4" oct="4" pname="d"/>
                  <note xml:id="event-2" dur="4" oct="4" pname="e"/>
                  <note xml:id="event-3" dur="4" oct="4" pname="f"/>
                </layer>
              </staff>
              <tempo staff="1" tstamp="1" place="above" mm="96" mm.unit="4" midi.bpm="96"/>
            </measure>
            <measure n="2">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-4" dur="2" oct="4" pname="g"/>
                  <note xml:id="event-5" dur="4" oct="4" pname="a"/>
                  <note xml:id="event-6" dur="4" oct="4" pname="b"/>
                </layer>
              </staff>
            </measure>
          </section>
        </score>
      </mdiv>
    </body>
  </music>
</mei>
