crates/musa-render/tests/snapshots/mei__twinkle.snap
---
source: crates/musa-render/tests/mei.rs
expression: mei_of(source)
---
<?xml version="1.0" encoding="UTF-8"?>
<mei xmlns="http://www.music-encoding.org/ns/mei" meiversion="5.0">
  <meiHead>
    <fileDesc>
      <titleStmt>
        <title>twinkle</title>
        <composer>traditional</composer>
        <arranger>musa</arranger>
      </titleStmt>
      <pubStmt/>
    </fileDesc>
  </meiHead>
  <music>
    <body>
      <mdiv>
        <score>
          <scoreDef meter.count="4" meter.unit="4" key.sig="0" key.mode="major">
            <pgHead>
              <rend halign="center" valign="top">
                <rend xml:id="front-title" fontsize="x-large">twinkle</rend>
              </rend>
              <rend halign="right" valign="bottom">
                <rend xml:id="front-composer">traditional</rend>
                <lb/>
                <rend xml:id="front-arranger" fontsize="small">musa</rend>
              </rend>
            </pgHead>
            <pgHead2>
              <rend halign="center" valign="top" fontsize="small">– <num label="page">#</num> –</rend>
            </pgHead2>
            <staffGrp>
              <staffDef n="1" lines="5">
                <label>piano</label>
                <labelAbbr>pia.</labelAbbr>
              </staffDef>
            </staffGrp>
          </scoreDef>
          <section>
            <measure n="1">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-0" dur="4" oct="4" pname="c"/>
                  <note xml:id="event-1" dur="4" oct="4" pname="c"/>
                  <note xml:id="event-2" dur="4" oct="4" pname="g"/>
                  <note xml:id="event-3" dur="4" oct="4" pname="g"/>
                </layer>
              </staff>
              <tempo staff="1" tstamp="1" place="above" mm="104" mm.unit="4" midi.bpm="104"/>
            </measure>
            <measure n="2">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-4" dur="4" oct="4" pname="a"/>
                  <note xml:id="event-5" dur="4" oct="4" pname="a"/>
                  <note xml:id="event-6" dur="2" oct="4" pname="g"/>
                </layer>
              </staff>
            </measure>
            <measure n="3">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-7" dur="4" oct="4" pname="f"/>
                  <note xml:id="event-8" dur="4" oct="4" pname="f"/>
                  <note xml:id="event-9" dur="4" oct="4" pname="e"/>
                  <note xml:id="event-a" dur="4" oct="4" pname="e"/>
                </layer>
              </staff>
            </measure>
            <measure n="4">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <note xml:id="event-b" dur="4" oct="4" pname="d"/>
                  <note xml:id="event-c" dur="4" oct="4" pname="d"/>
                  <note xml:id="event-d" dur="2" oct="4" pname="c"/>
                </layer>
              </staff>
            </measure>
            <measure n="5" right="end">
              <staff n="1">
                <layer xml:id="layer-1-1" n="1">
                  <rest xml:id="event-e" dur="1"/>
                </layer>
              </staff>
            </measure>
          </section>
        </score>
      </mdiv>
    </body>
  </music>
</mei>
